instruction preparing implementation + battery listener

--- a/src/de/yadrone/designProject/sample.fxml
+++ b/src/de/yadrone/designProject/sample.fxml
@@ -38,7 +38,7 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Button>
-                      <Button fx:id="startCameraButton" alignment="center" disable="true" onAction="#startCamera" prefWidth="155.0" style="-fx-background-radius: 0;" text="Start camera" />
+                      <Button fx:id="startCameraButton" alignment="center" disable="false" onAction="#startCamera" prefWidth="155.0" style="-fx-background-radius: 0;" text="Start camera" />
                </children>
                <VBox.margin>
                   <Insets top="10.0" />
