--- a/bin/de/yadrone/designProject/sample.fxml
+++ b/bin/de/yadrone/designProject/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -209,21 +210,58 @@
                </VBox.margin>
             </HBox>
             <Separator prefWidth="200.0" />
-
-      
-                      <Label text="Relative location data" textFill="#616161">
-                    <font>
-                        <Font name="Arial" size="18.0" />
-                    </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-                </Label>
-                <TextArea fx:id="relativePositionTxtArea" prefHeight="230.0">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </TextArea>
+            <HBox prefWidth="200.0">
+               <children>
+                  <VBox prefWidth="380.0">
+                     <children>
+            
+                  
+                                  <Label text="Relative location data" textFill="#616161">
+                                <font>
+                                    <Font name="Arial" size="18.0" />
+                                </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                            </Label>
+                            <TextArea fx:id="relativePositionTxtArea" prefHeight="240.0">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </TextArea>
+                     </children>
+                  </VBox>
+                  <Separator orientation="VERTICAL" prefHeight="200.0">
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                  </Separator>
+                  <VBox prefHeight="200.0" prefWidth="380.0">
+                     <children>
+                        <Label text="Drone instructions" textFill="#616161">
+                           <font>
+                              <Font name="Arial" size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Pane prefHeight="300.0" prefWidth="400.0">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                           <children>
+                              <ImageView fx:id="instructionsImg" fitHeight="212.0" fitWidth="353.0" layoutX="14.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../../img/default.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </Pane>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="15.0" left="25.0" right="15.0" top="15.0" />
